--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express-redirect": "^1.2.2",
     "express-session": "^1.14.2",
     "knex": "^0.10.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "request": "^2.34.0",
     "sqlite3": "~3.1.1"
   },
